@@ -1,7 +1,10 @@
 package nl.laura.boekenapi.service;
 
+import java.util.List;
+import java.util.stream.Collectors;
 import nl.laura.boekenapi.dto.BookRequest;
 import nl.laura.boekenapi.dto.BookResponse;
+import nl.laura.boekenapi.exception.DuplicateResourceException;
 import nl.laura.boekenapi.exception.ResourceNotFoundException;
 import nl.laura.boekenapi.mapper.BookMapper;
 import nl.laura.boekenapi.model.Author;
@@ -10,92 +13,81 @@ import nl.laura.boekenapi.model.Category;
 import nl.laura.boekenapi.repository.AuthorRepository;
 import nl.laura.boekenapi.repository.BookRepository;
 import nl.laura.boekenapi.repository.CategoryRepository;
-import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.server.ResponseStatusException;
-
-import java.util.List;
 
 @Service
-@Transactional(readOnly = true)
+@Transactional
 public class BookService {
 
     private final BookRepository bookRepository;
     private final AuthorRepository authorRepository;
     private final CategoryRepository categoryRepository;
-    private final BookMapper bookMapper;
 
-    public BookService(BookRepository bookRepository,
-                       AuthorRepository authorRepository,
-                       CategoryRepository categoryRepository,
-                       BookMapper bookMapper) {
+    public BookService(final BookRepository bookRepository,
+                       final AuthorRepository authorRepository,
+                       final CategoryRepository categoryRepository) {
         this.bookRepository = bookRepository;
         this.authorRepository = authorRepository;
         this.categoryRepository = categoryRepository;
-        this.bookMapper = bookMapper;
     }
 
-    public List<BookResponse> getAllBooks() {
-        return bookRepository.findAll()
-                .stream()
-                .map(bookMapper::toResponse)
-                .toList();
+    @Transactional(readOnly = true)
+    public List<BookResponse> getAll() {
+        return bookRepository.findAll().stream()
+                .map(BookMapper::toResponse)
+                .collect(Collectors.toList());
     }
 
-    public BookResponse getBookById(Long id) {
+    @Transactional(readOnly = true)
+    public BookResponse getById(final Long id) {
         Book book = bookRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Boek met id " + id + " niet gevonden"));
-        return bookMapper.toResponse(book);
+                .orElseThrow(() -> new ResourceNotFoundException("Boek niet gevonden: " + id));
+        return BookMapper.toResponse(book);
     }
 
-    @Transactional
-    public BookResponse create(BookRequest dto) {
-        Author author = authorRepository.findById(dto.getAuthorId())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "Auteur niet gevonden"));
+    public BookResponse create(final BookRequest request) {
+        Author author = authorRepository.findById(request.getAuthorId())
+                .orElseThrow(() -> new ResourceNotFoundException("Auteur niet gevonden: " + request.getAuthorId()));
+        Category category = categoryRepository.findById(request.getCategoryId())
+                .orElseThrow(() -> new ResourceNotFoundException("Categorie niet gevonden: " + request.getCategoryId()));
 
-        Category category = categoryRepository.findById(dto.getCategoryId())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "Categorie niet gevonden"));
-
-        Book book = new Book();
-        book.setTitle(dto.getTitle());
-        book.setDescription(dto.getDescription());
-        book.setPublicationYear(dto.getPublicationYear());
-        book.setAuthor(author);
-        book.setCategory(category);
-
-        Book saved = bookRepository.save(book);
-        return bookMapper.toResponse(saved);
-    }
-
-    @Transactional
-    public BookResponse update(Long id, BookRequest dto) {
-        Book book = bookRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Boek met id " + id + " niet gevonden"));
-
-        if (dto.getAuthorId() != null) {
-            Author author = authorRepository.findById(dto.getAuthorId())
-                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "Auteur niet gevonden"));
-            book.setAuthor(author);
-        }
-        if (dto.getCategoryId() != null) {
-            Category category = categoryRepository.findById(dto.getCategoryId())
-                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "Categorie niet gevonden"));
-            book.setCategory(category);
+        if (bookRepository.countByTitleIgnoreCaseAndAuthor_Id(request.getTitle(), author.getId()) > 0) {
+            throw new DuplicateResourceException("Boek met deze titel bij deze auteur bestaat al");
         }
 
-        book.setTitle(dto.getTitle());
-        book.setDescription(dto.getDescription());
-        book.setPublicationYear(dto.getPublicationYear());
-
-        Book saved = bookRepository.save(book);
-        return bookMapper.toResponse(saved);
+        Book entity = BookMapper.toEntity(request, author, category);
+        Book saved = bookRepository.save(entity);
+        return BookMapper.toResponse(saved);
     }
 
-    @Transactional
-    public void delete(Long id) {
-        Book book = bookRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Boek met id " + id + " niet gevonden"));
-        bookRepository.delete(book);
+    public BookResponse update(final Long id, final BookRequest request) {
+        Book entity = bookRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Boek niet gevonden: " + id));
+
+        Author author = authorRepository.findById(request.getAuthorId())
+                .orElseThrow(() -> new ResourceNotFoundException("Auteur niet gevonden: " + request.getAuthorId()));
+        Category category = categoryRepository.findById(request.getCategoryId())
+                .orElseThrow(() -> new ResourceNotFoundException("Categorie niet gevonden: " + request.getCategoryId()));
+
+        if (
+                (
+                        !entity.getTitle().equalsIgnoreCase(request.getTitle())
+                                || !entity.getAuthor().getId().equals(author.getId())
+                )
+                        && bookRepository.countByTitleIgnoreCaseAndAuthor_Id(request.getTitle(), author.getId()) > 0
+        ) {
+            throw new DuplicateResourceException("Boek met deze titel bij deze auteur bestaat al");
+        }
+
+        BookMapper.updateEntity(entity, request, author, category);
+        return BookMapper.toResponse(entity);
+    }
+
+    public void delete(final Long id) {
+        Book entity = bookRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Boek niet gevonden: " + id));
+        bookRepository.delete(entity);
     }
 }
+
